--- a/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
+++ b/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
@@ -66,7 +66,7 @@
                             <children>
                                 <FontAwesomeIcon fill="WHITE" glyphName="USER" layoutX="83.0" layoutY="65.0" size="5em" />
                                 <Label layoutX="23.0" layoutY="85.0" text="Patient ID:" textFill="WHITE" />
-                                <Label fx:id="nav_adminID" layoutX="83.0" layoutY="84.0" prefHeight="17.0" prefWidth="117.0" text="1" textFill="WHITE">
+                                <Label fx:id="nav_username" layoutX="83.0" layoutY="84.0" prefHeight="17.0" prefWidth="117.0" text="1" textFill="WHITE">
                                     <font>
                                         <Font name="System Bold" size="13.0" />
                                     </font>
@@ -84,7 +84,7 @@
                                         <FontAwesomeIcon glyphName="USERS" size="1.5em" />
                                     </graphic>
                                 </Button>
-                                <Button fx:id="gymclasses_btn" layoutX="7.0" layoutY="287.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Gym Classes">
+                                <Button fx:id="gymclasses_btn" layoutX="7.0" layoutY="287.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Course">
                                     <graphic>
                                         <FontAwesomeIcon glyphName="BOOKMARK" size="1.5em" />
                                     </graphic>
@@ -225,9 +225,9 @@
                                                         <Font size="18.0" />
                                                     </font>
                                                 </Label>
-                                                <ScrollPane fx:id="doctors_scrollPane" layoutX="11.0" layoutY="57.0" prefHeight="466.0" prefWidth="846.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="57.0">
+                                                <ScrollPane fx:id="trainers_scrollPane" layoutX="11.0" layoutY="57.0" prefHeight="466.0" prefWidth="846.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="57.0">
                                                     <content>
-                                                        <GridPane fx:id="doctors_gridPane" prefHeight="19.0" prefWidth="107.0">
+                                                        <GridPane fx:id="trainers_gridPane" prefHeight="19.0" prefWidth="107.0">
                                                             <columnConstraints>
                                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                             </columnConstraints>
@@ -246,14 +246,14 @@
                                                 <String fx:value="radius" />
                                             </styleClass>
                                             <children>
-                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Gym Classes">
+                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Courses">
                                                     <font>
                                                         <Font size="18.0" />
                                                     </font>
                                                 </Label>
-                                                <ScrollPane fx:id="doctors_scrollPane" layoutX="11.0" layoutY="57.0" prefHeight="466.0" prefWidth="846.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="57.0">
+                                                <ScrollPane fx:id="courses_scrollPane" layoutX="11.0" layoutY="57.0" prefHeight="466.0" prefWidth="846.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="57.0">
                                                     <content>
-                                                        <GridPane fx:id="doctors_gridPane" prefHeight="19.0" prefWidth="107.0">
+                                                        <GridPane fx:id="courses_gridPane" prefHeight="19.0" prefWidth="107.0">
                                                             <columnConstraints>
                                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                             </columnConstraints>
