--- a/src/main/resources/com/framja/gymmanagement/TrainerCard.fxml
+++ b/src/main/resources/com/framja/gymmanagement/TrainerCard.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" stylesheets="@style/Dashboard/dashboard.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.framja.gymmanagement.controller.TrainerDashboardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" stylesheets="@style/Dashboard/dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.framja.gymmanagement.controller.TrainerCardController">
     <children>
         <VBox prefHeight="200.0" prefWidth="100.0">
             <children>
@@ -20,7 +20,7 @@
                 </Circle>
                 <HBox prefHeight="25.0" prefWidth="300.0">
                     <children>
-                        <Label alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="152.0" text="Doctor ID:">
+                        <Label alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="152.0" text="Trainer ID:">
                             <HBox.margin>
                                 <Insets left="10.0" right="10.0" />
                             </HBox.margin>
@@ -40,7 +40,7 @@
                 </HBox>
                 <HBox layoutX="20.0" layoutY="144.0" prefHeight="25.0" prefWidth="300.0">
                     <children>
-                        <Label alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="151.0" text="Full Name:">
+                        <Label alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="151.0" text="Name:">
                             <HBox.margin>
                                 <Insets left="10.0" right="10.0" />
                             </HBox.margin>
@@ -48,7 +48,7 @@
                                 <Font size="15.0" />
                             </font>
                         </Label>
-                        <Label fx:id="trainer_fullName" prefHeight="21.0" prefWidth="205.0" text="Label">
+                        <Label fx:id="trainer_name" prefHeight="21.0" prefWidth="205.0" text="Label">
                             <font>
                                 <Font size="15.0" />
                             </font>
