--- a/src/main/resources/com/framja/gymmanagement/member-portal.fxml
+++ b/src/main/resources/com/framja/gymmanagement/member-portal.fxml
@@ -26,7 +26,7 @@
                             </font>
                         </Label>
                         <Label layoutX="129.0" layoutY="125.0" text="Member Portal" />
-                        <TextField fx:id="login_memberID" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="member ID" stylesheets="@style/Portal/portal.css">
+                        <TextField fx:id="login_username" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="member ID" stylesheets="@style/Portal/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-3" />
                                 <String fx:value="white-bg" />
