--- a/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
+++ b/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
@@ -1,27 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import java.lang.String?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.framja.gymmanagement.controller.MemberDashboardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.framja.gymmanagement.controller.MemberDashboardController">
     <children>
         <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
             <children>
@@ -91,7 +77,7 @@
                                 </Button>
                                 <Button fx:id="appointments_btn" layoutX="7.0" layoutY="337.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Appointments">
                                     <graphic>
-                                        <FontAwesomeIcon glyphName="CALENDAR" size="1.5em" />
+                                        <FontAwesomeIcon glyphName="CALENDAR" size="1.5em" text="" />
                                     </graphic>
                                 </Button>
                                 <Label layoutX="13.0" layoutY="389.0" text="Profile" textFill="WHITE" />
@@ -155,7 +141,7 @@
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label fx:id="cur_card_name" layoutX="115.0" layoutY="223.0" prefHeight="19.0" prefWidth="147.0" text="card name:" textFill="WHITE">
+                                                        <Label fx:id="cur_card_name" layoutX="140.0" layoutY="223.0" prefHeight="19.0" prefWidth="147.0" text="card name:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
@@ -165,21 +151,35 @@
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label fx:id="cur_card_begin_date" layoutX="115.0" layoutY="256.0" prefHeight="19.0" prefWidth="147.0" text="9/11/2000" textFill="WHITE">
+                                                        <Label fx:id="cur_card_begin_date" layoutX="140.0" layoutY="256.0" prefHeight="19.0" prefWidth="147.0" text="9/11/2000" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label layoutX="26.0" layoutY="289.0" text="Expired:" textFill="WHITE">
+                                                        <Label layoutX="30.0" layoutY="289.0" text="Expired:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label fx:id="cur_card_end_date" layoutX="115.0" layoutY="289.0" prefHeight="19.0" prefWidth="147.0" text="9/11/2000" textFill="WHITE">
+                                                        <Label fx:id="cur_card_end_date" layoutX="140.0" layoutY="289.0" prefHeight="19.0" prefWidth="147.0" text="9/11/2000" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
+                                                        <Label layoutX="30.0" layoutY="322.0" prefHeight="21.0" prefWidth="232.0" text="Extend/Register MembershipCard:" textFill="WHITE">
+                                                            <font>
+                                                                <Font size="15.0" />
+                                                            </font>
+                                                        </Label>
+                                                        <ComboBox fx:id="select_card" layoutX="30.0" layoutY="357.0" prefHeight="25.0" prefWidth="160.0" promptText="Choose your Card" styleClass="textfield-2" stylesheets="@style/Dashboard/member_dashboard.css" />
+
+<!--                                                        <DatePicker fx:id="appointment_d_schedule" layoutX="14.0" layoutY="304.0" prefHeight="25.0" prefWidth="302.0" styleClass="textfield-2" stylesheets="@style/Dashboard/member_dashboard.css" />-->
+                                                        <FontAwesomeIcon fx:id="registrationIcon" fill="WHITE" glyphName="PLUS_CIRCLE" layoutX="206.0" layoutY="382.0" onMouseClicked="#addCardBtn" size="3em" wrappingWidth="31.85714340209961" />
+<!--                                                        <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Details">-->
+<!--                                                            <font>-->
+<!--                                                                <Font size="18.0" />-->
+<!--                                                            </font>-->
+<!--                                                        </Label>-->
                                                     </children>
                                                 </AnchorPane>
                                             </children>
