--- a/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
+++ b/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
@@ -51,7 +51,7 @@
                         <AnchorPane prefHeight="560.0" prefWidth="214.0" styleClass="bg-color-2" stylesheets="@style/Dashboard/member_dashboard.css" BorderPane.alignment="CENTER">
                             <children>
                                 <FontAwesomeIcon fill="WHITE" glyphName="USER" layoutX="83.0" layoutY="65.0" size="5em" />
-                                <Label layoutX="23.0" layoutY="85.0" text="Patient ID:" textFill="WHITE" />
+                                <Label layoutX="23.0" layoutY="85.0" text="Member: " textFill="WHITE" />
                                 <Label fx:id="nav_username" layoutX="83.0" layoutY="84.0" prefHeight="17.0" prefWidth="117.0" text="1" textFill="WHITE">
                                     <font>
                                         <Font name="System Bold" size="13.0" />
@@ -73,11 +73,6 @@
                                 <Button fx:id="gymclasses_btn" layoutX="7.0" layoutY="287.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Course">
                                     <graphic>
                                         <FontAwesomeIcon glyphName="BOOKMARK" size="1.5em" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="appointments_btn" layoutX="7.0" layoutY="337.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Appointments">
-                                    <graphic>
-                                        <FontAwesomeIcon glyphName="CALENDAR" size="1.5em" text="" />
                                     </graphic>
                                 </Button>
                                 <Label layoutX="13.0" layoutY="389.0" text="Profile" textFill="WHITE" />
@@ -129,7 +124,7 @@
                                             <children>
                                                 <AnchorPane layoutX="12.0" layoutY="14.0" prefHeight="498.0" prefWidth="276.0" styleClass="bg-color-2" stylesheets="@style/Dashboard/member_dashboard.css" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="14.0">
                                                     <children>
-                                                        <Circle fx:id="home_doctor_circle" fill="#384046" layoutX="138.0" layoutY="82.0" radius="68.0" stroke="BLACK" strokeType="INSIDE" />
+                                                        <Circle fx:id="card_circle" fill="#384046" layoutX="138.0" layoutY="82.0" radius="68.0" stroke="BLACK" strokeType="INSIDE" />
                                                         <Label layoutX="30.0" layoutY="169.0" text="Membership Card" textFill="WHITE">
                                                             <font>
                                                                 <Font size="15.0" />
@@ -173,13 +168,8 @@
                                                         </Label>
                                                         <ComboBox fx:id="select_card" layoutX="30.0" layoutY="357.0" prefHeight="25.0" prefWidth="160.0" promptText="Choose your Card" styleClass="textfield-2" stylesheets="@style/Dashboard/member_dashboard.css" />
 
-<!--                                                        <DatePicker fx:id="appointment_d_schedule" layoutX="14.0" layoutY="304.0" prefHeight="25.0" prefWidth="302.0" styleClass="textfield-2" stylesheets="@style/Dashboard/member_dashboard.css" />-->
                                                         <FontAwesomeIcon fx:id="registrationIcon" fill="WHITE" glyphName="PLUS_CIRCLE" layoutX="206.0" layoutY="382.0" onMouseClicked="#addCardBtn" size="3em" wrappingWidth="31.85714340209961" />
-<!--                                                        <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Details">-->
-<!--                                                            <font>-->
-<!--                                                                <Font size="18.0" />-->
-<!--                                                            </font>-->
-<!--                                                        </Label>-->
+
                                                     </children>
                                                 </AnchorPane>
                                             </children>
@@ -191,17 +181,17 @@
                                                 <String fx:value="radius" />
                                             </styleClass>
                                             <children>
-                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Personal Training">
+                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Payment">
                                                     <font>
                                                         <Font size="15.0" />
                                                     </font>
                                                 </Label>
                                                 <TableView fx:id="ptTableView" layoutX="13.0" layoutY="52.0" prefHeight="185.0" prefWidth="517.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="12.0">
                                                     <columns>
-                                                        <TableColumn fx:id="ptColDescription" prefWidth="90.0" text="Description" />
-                                                        <TableColumn fx:id="ptColTrainer" prefWidth="109.0" text="Trainer" />
-                                                       <TableColumn fx:id="ptColDay" prefWidth="65.0" text="Schedule" />
-                                                        <TableColumn fx:id="ptColTime" prefWidth="79.0" text="Time" />
+                                                        <TableColumn fx:id="ptColPaymentId" prefWidth="90.0" text="Payment Id" />
+                                                        <TableColumn fx:id="ptColDescription" prefWidth="109.0" text="Description" />
+                                                       <TableColumn fx:id="ptColAmount" prefWidth="65.0" text="Amount" />
+                                                        <TableColumn fx:id="ptColTime" prefWidth="79.0" text="Date" />
                                                     </columns>
                                                     <columnResizePolicy>
                                                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -463,7 +453,7 @@
                                                     </font>
                                                 </Label>
                                                 <FontAwesomeIcon glyphName="EDIT" layoutX="124.0" layoutY="37.0" size="2em" />
-                                                <Label layoutX="115.0" layoutY="98.0" text="Patient ID:">
+                                                <Label layoutX="115.0" layoutY="98.0" text="Member ID:">
                                                     <font>
                                                         <Font size="15.0" />
                                                     </font>
