--- a/src/main/resources/com/framja/gymmanagement/trainer-portal.fxml
+++ b/src/main/resources/com/framja/gymmanagement/trainer-portal.fxml
@@ -26,7 +26,7 @@
                             </font>
                         </Label>
                         <Label layoutX="129.0" layoutY="125.0" text="Trainer Portal" />
-                        <TextField fx:id="login_trainerID" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="trainer ID" stylesheets="@style/Portal/portal.css">
+                        <TextField fx:id="login_username" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="trainer ID" stylesheets="@style/Portal/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
@@ -71,7 +71,7 @@
                             </font>
                         </Label>
                         <Label layoutX="129.0" layoutY="124.0" text="Trainer Portal" />
-                        <TextField fx:id="register_fullName" layoutX="39.0" layoutY="172.0" prefHeight="30.0" prefWidth="250.0" promptText="Full Name" stylesheets="@style/Portal/portal.css">
+                        <TextField fx:id="register_username" layoutX="39.0" layoutY="172.0" prefHeight="30.0" prefWidth="250.0" promptText="Full Name" stylesheets="@style/Portal/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
